# PPO-with-custom-lander-environment

./: README.md  main_menu.py  pyproject.toml  requirements.txt
dummy_test_code/: gameobject.py  landerenv.py  landergame.py
env/: lander_env.py
game_core/: game_logic.py  game_objects.py  game_render.py
logs/1748613956/PPO_Lander_0/: events.out.tfevents.1748613958.Zero.12680.0  events.out.tfevents.1748631164.Zero.12680.1
logs/1757173231/PPO_Lander_0/: events.out.tfevents.1757173233.Zero.3528.0
logs/1757173877/PPO_Lander_0/: events.out.tfevents.1757173879.Zero.19232.0  events.out.tfevents.1757175575.Zero.19232.1  events.out.tfevents.1757177266.Zero.19232.2  events.out.tfevents.1757178956.Zero.19232.3  events.out.tfevents.1757180645.Zero.19232.4  events.out.tfevents.1757182335.Zero.19232.5  events.out.tfevents.1757184024.Zero.19232.6  events.out.tfevents.1757185714.Zero.19232.7  events.out.tfevents.1757187407.Zero.19232.8  events.out.tfevents.1757189102.Zero.19232.9
logs/1776675935/PPO_Lander_0/: events.out.tfevents.1776675935.fedora.515407.0  events.out.tfevents.1776677568.fedora.515407.1  events.out.tfevents.1776679201.fedora.515407.2  events.out.tfevents.1776680834.fedora.515407.3  events.out.tfevents.1776682468.fedora.515407.4  events.out.tfevents.1776684101.fedora.515407.5
logs/1776686668/PPO_Lander_0/: events.out.tfevents.1776686669.fedora.659810.0
